# PointPillarTensorRT-ROS

./: .gitignore  README.md  compile.sh
src/pointpillar/: CMakeLists.txt  main.cpp  package.xml
src/pointpillar/src/: preprocess.cpp  preprocess_kernels.cu
